<resources>
    <string name="app_name">여행 기록</string>
    <string name="nav_records">기록</string>
    <string name="nav_map">지도</string>
    <string name="action_add">기록 추가</string>
    <string name="action_edit">수정</string>
    <string name="action_delete">삭제</string>
    <string name="action_delete_all">전체 삭제</string>
    <string name="action_sort">정렬 변경</string>
    <string name="action_about">앱 정보</string>
    <string name="empty_trips">아직 저장된 여행 기록이 없습니다. 오른쪽 아래 + 버튼으로 첫 기록을 추가하세요.</string>
    <string name="confirm_delete_title">기록 삭제</string>
    <string name="confirm_delete_message">이 여행 기록을 삭제할까요?</string>
    <string name="confirm_delete_all_title">전체 삭제</string>
    <string name="confirm_delete_all_message">모든 여행 기록을 삭제할까요?</string>
    <string name="delete_done">삭제했습니다.</string>
    <string name="delete_all_done">전체 기록을 삭제했습니다.</string>
    <string name="error_generic">작업 중 오류가 발생했습니다.</string>
    <string name="sort_newest">최신순</string>
    <string name="sort_oldest">오래된순</string>
    <string name="sort_label_format">정렬: %1$s</string>
    <string name="gps_available">GPS 있음</string>
    <string name="gps_missing">GPS 없음</string>
    <string name="about_message">여행 계획 및 기록 앱\nSQLite, Fragment, RecyclerView, 사진 Intent, Google 지도와 GPS 마커를 포함합니다.</string>
    <string name="place_hint">여행지명</string>
    <string name="date_hint">방문 날짜</string>
    <string name="memo_hint">여행 메모</string>
    <string name="select_date">날짜 선택</string>
    <string name="select_photo_picker">사진 선택</string>
    <string name="capture_camera">카메라 촬영</string>
    <string name="save_trip">저장</string>
    <string name="title_add_trip">여행 기록 추가</string>
    <string name="title_edit_trip">여행 기록 수정</string>
    <string name="place_required">여행지명을 입력하세요.</string>
    <string name="date_required">방문 날짜를 입력하세요.</string>
    <string name="trip_saved">여행 기록을 저장했습니다.</string>
    <string name="photo_processing">사진을 처리하는 중…</string>
    <string name="camera_unavailable">사용 가능한 카메라 앱이 없습니다.</string>
    <string name="camera_permission_needed">카메라 권한이 필요합니다.</string>
    <string name="media_location_permission_needed">사진 위치 정보를 읽으려면 위치 메타데이터 권한이 필요합니다.</string>
    <string name="detail_memo_empty">작성된 메모가 없습니다.</string>
    <string name="open_map">지도에서 보기</string>
    <string name="map_empty">GPS가 있는 사진 기록이 아직 없습니다. GPS 정보가 들어 있는 사진을 저장하면 Google 지도에 마커가 표시됩니다.</string>
    <string name="map_key_missing">Google Maps API 키가 없습니다. local.properties에 MAPS_API_KEY를 추가하면 내장 지도를 사용할 수 있습니다.</string>
    <string name="map_play_services_missing">Google Play services를 사용할 수 없어 지도를 표시할 수 없습니다.</string>
    <string name="photo_section_title">사진</string>
    <string name="photo_count_format">사진 %1$d/%2$d장</string>
    <string name="photo_limit_message">사진은 최대 %1$d장까지 등록할 수 있습니다.</string>
    <string name="photo_partial_message">선택한 사진 %1$d장 중 %2$d장만 추가합니다. 사진은 최대 %3$d장까지 등록할 수 있습니다.</string>
    <string name="remove_photo">사진 삭제</string>
    <string name="remove_photo_icon">×</string>
    <string name="no_image_app">사진을 선택할 수 있는 앱이 없습니다.</string>
    <string name="image_app_picker_title">이미지를 선택할 앱</string>
    <string name="no_photo_message">등록된 사진이 없습니다.</string>
    <string name="photo_location_summary_format">GPS 사진 %1$d장 / 전체 사진 %2$d장</string>
    <string name="photo_viewer_title">사진 보기</string>
    <string name="photo_viewer_count_format">%1$d / %2$d</string>
    <string name="close_photo">닫기</string>
</resources>
